...
                    annotation.title = hitchhotspot.destination
                    annotation.subtitle = "hitchtime: " + String((hitchhotspot.averageTime / 60)) + " min"
                    self.map.addAnnotation(annotation);
                }
            });
        } else{
            txt_from.attributedPlaceholder = NSAttributedString(string: "Please fill in your starting location",
                                                                   attributes: [NSAttributedString.Key.foregroundColor: UIColor.init(red: 255, green: 0, blue: 0, alpha: 0.7)])
            txt_to.attributedPlaceholder = NSAttributedString(string: "Please fill in your destination",
                                                                attributes: [NSAttributedString.Key.foregroundColor: UIColor.init(red: 255, green: 0, blue: 0, alpha: 0.7)])
        }
    }
    
    @IBAction func btn_startNavigation_clicked(_ sender: UIButton) {
        if let selectedHitchhotspot = self.selectedHitchhotspot {
...
